# ai_baskt_test

./: .gitignore  README.md  pyproject.toml  ref_keypoints.json  requirements.txt  streamlit_app.py  user_keypoints.json
app/: analysis.py  body_analysis.py  body_metrics.py  dados_referencia.json  extract_pose.py  feedback.py  history.py  main.py  pose_extraction.py  reference_analysis.py  shot_detection.py  shot_detection_example.py  skeleton_visualizer.py  terms.py  test_shot_detection.py
app/core/: analysis.py  compare_pose.py  constants.py  extract_pose.py
app/data/: history.json
app/data/uploads/20250615020326/: user.json
app/data/uploads/20250615021122/: ref.json
app/keypoints_data/: curry_back_pose.npy  curry_side_pose.npy  user_sample_pose.npy
app/results/: last_analysis.json
app/scripts/: compare_keypoints_visual.py  convert_npy_to_json.py  extract_keypoints.py  history.py  upload.py  visual_side_by_side.py
